--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,11 +23,11 @@ jobs:
         run: |
           ln -s vulkan_android.pc vulkan.pc
           sudo apt update
-          sudo apt install -y meson libxrandr-dev libxxf86vm-dev libxcb-*-dev libx11-xcb-dev libxfixes-dev libdrm-dev libx11-dev
+          sudo apt install -y libxrandr-dev libxxf86vm-dev libxcb-*-dev libx11-xcb-dev libxfixes-dev libdrm-dev libx11-dev
           cp -R /usr/include/X11 include/
           cp -R /usr/include/xcb include/
           cp -R /usr/include/GL/* include/GL/
-          pip3 install mako
+          pip3 install mako meson ninja
           #
           if [ "${{matrix.arch}}" == "arm32" ]; then
             export ANDROID_TARGET=armv7a-linux-androideabi
