--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -16,11 +16,11 @@ jobs:
           git clone --depth 1 https://github.com/KhronosGroup/MoltenVK
           ln -s vulkan_ios.pc vulkan.pc
           brew install meson pkg-config
-          # sudo apt install -y meson libxrandr-dev libxxf86vm-dev libxshmfence-dev libxcb-*-dev libx11-xcb-dev libxfixes-dev libdrm-dev libx11-dev
+          # sudo apt install -y libxrandr-dev libxxf86vm-dev libxshmfence-dev libxcb-*-dev libx11-xcb-dev libxfixes-dev libdrm-dev libx11-dev
           # cp -R /usr/include/X11 include/
           # cp -R /usr/include/xcb include/
           # cp -R /usr/include/GL/* include/GL/
-          pip3 install mako
+          pip3 install mako meson ninja
           # -Dglx=gallium-xlib \
           # -Dglx=dri
           meson build-ios-aarch64 \
