--- a/src/gallium/frontends/osmesa/meson.build
+++ b/src/gallium/frontends/osmesa/meson.build
@@ -27,7 +27,7 @@ endif
 
 libosmesa_st = static_library(
   'osmesa_st',
-  'osmesa_bufferless.c',
+  'osmesa.c',
   c_args : osmesa_st_c_args,
   include_directories : [
     inc_include, inc_src, inc_gallium, inc_gallium_aux, inc_gallium_drivers, inc_mapi, inc_mesa,
